Bug 1726808 - Un-hardcode the snap name to check against in nsToolkitProfileService::IsSnapEnvironment(). r=stransky,mossop

Differential Revision: https://phabricator.services.mozilla.com/D123239